[package]
authors       = ["강동윤 <kdy1997.dev@gmail.com>"]
description   = "Raw lexer for swc"
documentation = "https://rustdoc.swc.rs/swc_ecma_raw_lexer/"
edition       = { workspace = true }
include       = ["Cargo.toml", "src/**/*.rs", "examples/**/*.rs"]
license       = { workspace = true }
name          = "swc_ecma_raw_lexer"
repository    = { workspace = true }
version       = "0.1.0"

[dependencies]
swc_atoms  = { version = "5.0.0", path = "../swc_atoms" }
swc_common = { version = "8.0.0", path = "../swc_common" }

logos                 = { workspace = true }
new_debug_unreachable = { workspace = true }
num-bigint            = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
regex             = { workspace = true }
